--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.21.0",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -p3001 --watch db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.3"
+    "@capacitor/cli": "2.4.3",
+    "json-server": "^0.16.3"
   },
   "description": "An Ionic project"
 }
