--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "photo-gallery",
+  "appName": "mobile-app-pfe",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
