--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
+    "@types/history": "^4.7.8",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
@@ -23,6 +24,7 @@
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-page-visibility": "^6.2.0",
     "react-qr-reader": "^2.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
