--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@agney/ir-toast": "^0.2.0",
     "@capacitor/android": "^2.4.3",
     "@capacitor/core": "2.4.3",
     "@ionic/cli": "^6.12.2",
@@ -30,7 +31,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "3.8.3"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
