feat : new shiny icon

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@agney/ir-toast": "^0.2.0",
     "@capacitor/android": "^2.4.3",
     "@capacitor/core": "2.4.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@ionic/cli": "^6.12.2",
     "@ionic/pwa-elements": "^3.0.1",
     "@ionic/react": "^5.0.7",
