--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,7 +40,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3fb54e",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "orientation": "portrait"
 }
