--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@agney/ir-toast": "^0.2.0",
     "@capacitor/android": "^2.4.3",
-    "@capacitor/core": "2.4.3",
+    "@capacitor/core": "^2.4.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -27,10 +27,12 @@
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.21.0",
     "firebase": "^8.1.2",
+    "i18next": "^19.8.4",
     "ionicons": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-i18next": "^11.8.2",
     "react-page-visibility": "^6.2.0",
     "react-qr-reader": "^2.2.1",
     "react-router": "^5.1.2",
@@ -42,8 +44,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
