--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-qr-reader": "^2.1.3",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
