--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "serve": "^11.3.2",
     "typescript": "^3.9.7"
   },
   "scripts": {
