--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ionic/react": "^5.0.7",
     "@ionic/react-hooks": "0.0.8",
     "@ionic/react-router": "^5.0.7",
+    "@mars/heroku-js-runtime-env": "^3.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
